// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search-body error matches snapshot 1`] = `
<div
  class="search-body-root"
>
  <h2
    class="search-body-title"
  >
    Search
  </h2>
   
  <div
    class="search-input-wrapper"
  >
    <input
      class="search-input"
    />
  </div>
   
  <h2
    class="search-body-title"
  >
    
    Chat messages
    
    <!---->
  </h2>
   
  <div>
    
    Error fetching messages
  
  </div>
</div>
`;

exports[`search-body loading matches snapshot 1`] = `
<div
  class="search-body-root"
>
  <h2
    class="search-body-title"
  >
    Search
  </h2>
   
  <div
    class="search-input-wrapper"
  >
    <input
      class="search-input"
    />
  </div>
   
  <h2
    class="search-body-title"
  >
    
    Chat messages
    
    <loading-spinner-stub />
  </h2>
   
  <div
    class="search-result-empty-message"
  >
    
    No message search results...
  
  </div>
</div>
`;

exports[`search-body matches snapshot 1`] = `
<div
  class="search-body-root"
>
  <h2
    class="search-body-title"
  >
    Search
  </h2>
   
  <div
    class="search-input-wrapper"
  >
    <input
      class="search-input"
    />
  </div>
   
  <h2
    class="search-body-title"
  >
    
    Chat messages
    
    <!---->
  </h2>
   
  <div
    class="search-result-empty-message"
  >
    
    No message search results...
  
  </div>
</div>
`;

exports[`search-body search results matches snapshot 1`] = `
<div
  class="search-body-root"
>
  <h2
    class="search-body-title"
  >
    Search
  </h2>
   
  <div
    class="search-input-wrapper"
  >
    <input
      class="search-input"
    />
  </div>
   
  <h2
    class="search-body-title"
  >
    
    Chat messages
    
    <!---->
  </h2>
   
  <ul
    class="message-search-list"
  >
    <search-body-message-result-item-stub
      messagesearchresult="[object Object]"
    />
    <search-body-message-result-item-stub
      messagesearchresult="[object Object]"
    />
  </ul>
</div>
`;
